adding a random product suggest

--- a/sass/02-base/_base.scss
+++ b/sass/02-base/_base.scss
@@ -21,6 +21,7 @@
   body {
     font-family: "Manrope", sans-serif;
     font-size: 1.6rem;
+    background-color: $background_color;
   }
 }
 
@@ -48,3 +49,4 @@ html {
     font-size: 28%;
   }
 }
+
