--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -10,3 +10,6 @@
 @import './03-globals/loader';
 @import './03-globals/menu';
 
+@import './04-components/homepage';
+@import './04-components/products';
+
