--- a/sass/04-components/_cart.scss
+++ b/sass/04-components/_cart.scss
@@ -1,5 +1,23 @@
 .cart {
     width: calc(100% - 40px);
     height: 100%;
-    min-height: 100vh;
+    margin-top: 62px;
+    &__row {
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        flex-direction: row;
+    }
+}
+
+button {
+    background-color: #064a3d;
+    color: #ffffff;
+    font-size: 12px;
+    font-weight: 700;
+    border: none;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    padding: 2px 10px;
 }
