--- a/sass/04-components/_cart.scss
+++ b/sass/04-components/_cart.scss
@@ -1,24 +1,34 @@
 .cart {
-    width: calc(100% - 40px);
     height: 100%;
     margin-top: 62px;
+    display: flex;
+    flex-direction: column;
+    row-gap: 44px;
     &__row {
         width: 100%;
         display: flex;
-        justify-content: space-between;
-        align-items: center;
+        justify-content: space-around;
+        align-items: flex-start;
         flex-direction: row;
+    }
+    & h1 {
+        font-size: 24px;
+        margin-top: 20px;
+        font-family: 'Gentium Book Basic', serif;
+        text-align: center;
     }
 }
 
 button {
-    background-color: #064a3d;
+    background-color: #112926;
     color: #ffffff;
     font-size: 12px;
-    font-weight: 700;
+    font-weight: 400;
     border: none;
     cursor: pointer;
     transition: all 0.3s ease;
-    padding: 2px 10px;
+    padding: 12px 40px 12px 40px;
+    border-radius: 3px;
+    text-transform: uppercase;
 }
 
