--- a/sass/04-components/_cart.scss
+++ b/sass/04-components/_cart.scss
@@ -1,34 +1,49 @@
 .cart {
-    height: 100%;
-    margin-top: 62px;
+  height: 100%;
+  margin-top: 62px;
+  display: flex;
+  flex-direction: column;
+  row-gap: 44px;
+  &__row {
+    width: 100%;
     display: flex;
-    flex-direction: column;
-    row-gap: 44px;
-    &__row {
-        width: 100%;
-        display: flex;
-        justify-content: space-around;
-        align-items: flex-start;
-        flex-direction: row;
-    }
-    & h1 {
-        font-size: 24px;
-        margin-top: 20px;
-        font-family: 'Gentium Book Basic', serif;
-        text-align: center;
-    }
+    justify-content: space-around;
+    align-items: flex-start;
+    flex-direction: row;
+  }
+  & h1 {
+    font-size: 24px;
+    margin-top: 20px;
+    font-family: "Gentium Book Basic", serif;
+    text-align: center;
+  }
 }
 
 button {
-    background-color: #112926;
-    color: #ffffff;
-    font-size: 12px;
-    font-weight: 400;
-    border: none;
-    cursor: pointer;
-    transition: all 0.3s ease;
-    padding: 12px 40px 12px 40px;
-    border-radius: 3px;
-    text-transform: uppercase;
+  background-color: #112926;
+  color: #ffffff;
+  font-size: 12px;
+  font-weight: 400;
+  border: none;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  padding: 12px 40px 12px 40px;
+  border-radius: 3px;
+  text-transform: uppercase;
 }
-
+.pre {
+    padding: 8px;
+    cursor: pointer;
+    display: inline-flex;
+    position: relative;
+    align-items: center;
+  &__jewel {
+    display: block;
+    position: absolute;
+    left: 0;
+    text-align: center;
+    width: 100%;
+    font-size: 9px;
+    margin-top: 3.75px;
+  }
+}
