--- a/sass/04-components/_cart.scss
+++ b/sass/04-components/_cart.scss
@@ -44,6 +44,7 @@ button {
     text-align: center;
     width: 100%;
     font-size: 9px;
-    margin-top: 3.75px;
+    margin-top: 5px;
+    color: #112926;
   }
 }
