--- a/sass/04-components/_homepage.scss
+++ b/sass/04-components/_homepage.scss
@@ -11,12 +11,20 @@ ul {
   justify-items: center;
   gap: 44px;
   padding: 0 26px;
+  @media screen and (min-width: 418px) {
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+  }
   @media screen and (min-width: 576px) {
     padding: 0 32px;
-    grid-template-columns: repeat(2, 1fr);
   }
   @media screen and (min-width: 768px) {
     padding: 0 42px;
+  }
+  @media screen and (min-width: 992px) {
+    grid-template-columns: repeat(4, 1fr);
+  }
+  @media screen and (min-width: 1224px) {
+    grid-template-columns: repeat(5, 1fr);
   }
   & li {
     display: flex;
