--- a/sass/04-components/_products.scss
+++ b/sass/04-components/_products.scss
@@ -72,3 +72,9 @@
   width: 100%;
   color: #04442c;
 }
+
+.product__title {
+  font-size: 32px;
+  font-family: "Gentium Book Basic", serif;
+  color: var(--color);
+}
