--- a/sass/04-components/_products.scss
+++ b/sass/04-components/_products.scss
@@ -79,3 +79,13 @@
   font-family: "Gentium Book Basic", serif;
   color: var(--color);
 }
+
+.page__product {
+  min-height: 100vh;
+  width: 100%;
+  padding-bottom: 62px;
+}
+
+main {
+  padding-top: 62px;
+}
