--- a/sass/04-components/_products.scss
+++ b/sass/04-components/_products.scss
@@ -15,7 +15,7 @@
       margin-top: 10px;
       margin-bottom: 10px;
       font-family: "Gentium Book Basic", serif;
-      color: #bb8b1b;
+      color: #dfa112;
     }
   }
   &__details {
