--- a/client/sass/styles.scss
+++ b/client/sass/styles.scss
@@ -13,4 +13,5 @@
 @import './04-components/homepage';
 @import './04-components/products';
 @import './04-components/cart';
+@import './04-components/success';
 
