--- a/client/sass/styles.scss
+++ b/client/sass/styles.scss
@@ -14,4 +14,5 @@
 @import './04-components/products';
 @import './04-components/cart';
 @import './04-components/success';
+@import './04-components/recommended';
 
