--- a/client/sass/02-base/_base.scss
+++ b/client/sass/02-base/_base.scss
@@ -19,7 +19,6 @@
 
 @supports (padding: env(safe-area-inset-top)) {
   body {
-    font-family: "Manrope", sans-serif;
     font-size: 1.6rem;
     background-color: $background_color;
   }
@@ -27,7 +26,7 @@
 
 html {
   font-size: 62.5%;
-  scroll-behavior: smooth;
+  scroll-behavior: initial;
   -ms-overflow-style: none;
   scrollbar-width: none;
   @media screen and (max-width: 1400px) {
@@ -50,3 +49,6 @@ html {
   }
 }
 
+.orange_warn {
+  color: orange;
+}
