--- a/client/sass/04-components/_cart.scss
+++ b/client/sass/04-components/_cart.scss
@@ -19,18 +19,18 @@
   }
 }
 
-button {
-  background-color: #112926;
-  color: #ffffff;
-  font-size: 12px;
-  font-weight: 400;
-  border: none;
-  cursor: pointer;
-  transition: all 0.3s ease;
-  padding: 12px 40px 12px 40px;
-  border-radius: 3px;
-  text-transform: uppercase;
-}
+// button {
+//   background-color: #112926;
+//   color: #ffffff;
+//   font-size: 12px;
+//   font-weight: 400;
+//   border: none;
+//   cursor: pointer;
+//   transition: all 0.3s ease;
+//   padding: 12px 40px 12px 40px;
+//   border-radius: 3px;
+//   text-transform: uppercase;
+// }
 .pre {
   padding: 8px;
   cursor: pointer;
@@ -43,9 +43,10 @@ button {
     left: 0;
     text-align: center;
     width: 100%;
-    font-size: 9px;
-    margin-top: 5px;
+    font-size: 10px;
+    margin-top: 7px;
     color: #112926;
+    font-family: $sirenia;
   }
 }
 
