--- a/client/sass/02-base/_reset.scss
+++ b/client/sass/02-base/_reset.scss
@@ -6,9 +6,14 @@
   margin: 0;
 }
 
+.lenis.lenis-smooth [data-lenis-prevent] {
+  overscroll-behavior: contain;
+}
+
 html {
-  height: 100%;
+  height: auto;
   box-sizing: border-box;
+  scroll-behavior: auto;
 }
 
 h1,
