--- a/client/sass/04-components/_success.scss
+++ b/client/sass/04-components/_success.scss
@@ -2,9 +2,10 @@
   &__content {
     padding: 12px 26px;
     & h1 {
-      font-size: 22px;
+      font-size: 32px;
       font-weight: 600;
       padding-bottom: 18px;
+      font-family: $sirenia;
     }
     & p {
       font-size: 16px;
