--- a/client/sass/styles.scss
+++ b/client/sass/styles.scss
@@ -10,9 +10,10 @@
 @import './03-globals/loader';
 @import './03-globals/menu';
 
-@import './04-components/homepage';
-@import './04-components/products';
+@import './04-components/landing';
+@import './04-components/product';
 @import './04-components/cart';
 @import './04-components/success';
 @import './04-components/recommended';
+@import './04-components/search';
 
