--- a/client/sass/02-base/_base.scss
+++ b/client/sass/02-base/_base.scss
@@ -50,7 +50,7 @@ html {
 }
 
 main {
-  padding-top: 68px;
+  padding-top: 60px;
 }
 
 .placeholder {
@@ -68,7 +68,7 @@ main {
 }
 
 .orange_warn {
-  color: orange;
+  color: #ffbc00;
 }
 
 .disabled {
