--- a/client/sass/styles.scss
+++ b/client/sass/styles.scss
@@ -9,10 +9,10 @@
 @import './03-globals/footer';
 @import './03-globals/loader';
 @import './03-globals/menu';
+@import './03-globals/cart';
 
 @import './04-components/landing';
 @import './04-components/product';
-@import './04-components/cart';
 @import './04-components/success';
 @import './04-components/recommended';
 @import './04-components/search';
