--- a/client/sass/03-globals/_header.scss
+++ b/client/sass/03-globals/_header.scss
@@ -12,6 +12,8 @@ header {
   background-color: $background_color;
   & h1 {
     color: #111;
+    font-family: $sirenia;
+    font-size: 22px;
   }
   @media screen and (min-width: 576px) {
     padding: 16px 32px;
